kubernates/manifest/sample/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
  labels:
    environment: development
