kubernates/manifest/sample/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: ns1
spec:
  containers:
    - name: cont1
      image: nginx:latest
      ports:
        - containerPort: 80 
      resources:
        limits: 
          memory: "128Mi"
          cpu: "500m" 
        requests:
          memory: "64Mi"
          cpu: "250m"
  restartPolicy: Always
