kubernates/manifest/sample/ingress_controller.yaml
#  This manifest deploys the NGINX Ingress Controller in a Kubernetes cluster. It includes a Deployment for the controller, a ConfigMap for configuration, a Service to expose the controller, and a ServiceAccount for permissions.
# 
# To apply this manifest, save it to a file named ingress_controller.yaml and run:
# kubectl apply -f ingress_controller.yaml
# After applying, you can check the status of the deployment and service using:
# kubectl get deployments -n default
# kubectl get services -n default
# kubectl get serviceaccounts -n default

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.34.1
        args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/nginx-configuration
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: NodePort
  selector:
    app: nginx-ingress
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30080
  - name: https
    port: 443 
    targetPort: 443
    protocol: TCP
    nodePort: 30443
